# ShrinkWrap

./: .gitignore  LICENSE  README.md  pyproject.toml
shrinkwrap/: cli.py  config.py
shrinkwrap/analyze/: imports.py  prune.py
shrinkwrap/bundle/: assembler.py  bytecode.py  layout.py  optimizer.py
shrinkwrap/bundle/formats/: directory.py  executable.py  singlefile.py  squashfs.py
shrinkwrap/runtime/: discover.py  env.py  python.py
shrinkwrap/shrinkwrap/: cli.py  errors.py  logger.py
shrinkwrap/shrinkwrap/analyze/: entrypoint.py  requirements.py
shrinkwrap/shrinkwrap/bundle/: assembler.py  layout.py
shrinkwrap/shrinkwrap/bundle/formats/: directory.py
shrinkwrap/shrinkwrap/runtime/: discover.py  launcher.py  python.py
shrinkwrap/utils/: fs.py  subprocess.py
